# f1-race-predictor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: f1-daily-pipeline.yml
data/processed/: f1_cleaned_2024_2025.parquet  f1_features_2024_2025.parquet  f1_features_advanced_2024_2025.parquet  f1_ml_ready_2024_2025.parquet
data/raw/: f1_data_2024.parquet  f1_data_2025.parquet
models/: points_model.pkl  position_model.pkl  top3_model.pkl  winner_model.pkl
src/: clean_data.py  create_features.py  create_features_advanced.py  explore_data.py  ingest_data.py  prepare_ml_data.py  train_models.py
streamlit_app/: app.py
