[project]
name = "f1-race-predictor"
version = "0.1.0"
description = "F1 Race Outcome Predictor"
requires-python = ">=3.11"
dependencies = [
    "fastf1",
    "pandas",
    "pyarrow",
    "xgboost",
    "scikit-learn",
    "joblib",
    "streamlit",
    "mlflow",
    "shap",
]

[tool.uv]
dev-dependencies = [
    "black",
    "ruff",
]
