[project]
name = "f1-race-predictor"
version = "0.1.0"
description = "F1 Race Outcome Predictor with MLOps"
requires-python = ">=3.11"
dependencies = [
    "fastf1>=0.12",
    "pandas",
    "pyarrow",
    "xgboost",
    "scikit-learn",
    "joblib",
    "streamlit",
    "mlflow",
    "shap",
    "plotly",
]

[tool.uv]
dev-dependencies = [
    "black",
    "ruff",
]

[tool.ruff]
line-length = 100
